fix(#7111): strict map key order for comparator-equal distinct keys; overwrite test with a longer stale destination
- compareKeys breaks the tie between keys BinaryComparator ranks equal but the map keeps distinct (BigDecimal 1.0
  and 1.00) on their string form, so the sorted key sequence no longer depends on insertion order
- FileUtilsTest.copyFileOverwritesExistingDestination pre-fills the destination with more bytes than the source

(cherry picked from commit dc2e8b7648bbf9535aa9cc5c118d1dde576c5618)